--- a/player/player.html
+++ b/player/player.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8">
     <title>Player</title>
     <link rel="stylesheet" href="static/css/font-awesome.min.css">
+    <style type="text/css">
+        button {
+            border: none;
+            cursor: pointer;
+            color: white;
+            background: transparent;
+        }
+
+        .player-container {
+            width: 800px;
+            height: 600px;
+            cursor: pointer;
+            box-shadow: 0 0 2px 2px rgba(0, 0, 0, 4);
+            display: flex;
+            flex-direction: column;
+        }
+
+        .player-style {
+            flex-grow: 1;
+        }
+    </style>
 </head>
 <body>
-<div id="player" style="width: 800px; height: 600px; cursor: pointer;">
-    <div class="js-video-container" style="width: 100%; height: 100%"></div>
-    <button style="border:none; cursor: pointer;"><i class="fa fa-play" aria-hidden="true"></i></button>
+<div id="player" class="player-container">
+    <div class="js-video-container player-style"></div>
+    <div style="background: black;">
+        <button class="js-play-button"><i class="fa fa-play" aria-hidden="true"></i></button>
+        <button class="js-pause-button"><i class="fa fa-pause" aria-hidden="true"></i></button>
+    </div>
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://unpkg.com/playable@2.10.3/dist/statics/playable.bundle.min.js"></script>
