--- a/player/index.html
+++ b/player/index.html
@@ -2,64 +2,67 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Player</title>
+    <link rel="stylesheet" href="static/css/font-awesome.min.css">
+    <style type="text/css">
+        button {
+            border: none;
+            cursor: pointer;
+            color: white;
+            background: transparent;
+            font-size: 150%;
+            line-height: 1;
+            margin: 0.5%;
+            padding: 5px;
+
+        }
+
+        .player-container {
+            width: 800px;
+            height: 600px;
+            cursor: pointer;
+            box-shadow: 0 0 2px 2px rgba(0, 0, 0, 4);
+            display: flex;
+            flex-direction: column;
+        }
+
+        .player-style {
+            flex-grow: 1;
+        }
+
+        .button-container {
+            background: black;
+            display: flex;
+            flex-direction: row;
+
+        }
+
+        #free-space {
+            flex-grow: 1;
+        }
+    </style>
 </head>
 <body>
-<div>
-    <h2>
-        <a href=#><b>Коала</b> — Википедия</a>
-        <br>
-        <small>
-            <small>
-                ru.wikipedia.org›Коала
-            </small>
-        </small>
-    </h2>
-    <p><b>Коaла</b> (лат. Phascolarctos cinereus) — вид сумчатых, обитающий в Австралии. Единственный современный
-        представитель семейства коаловых ... <a href=#>Читать ещё.</a>
-    </p>
+<div id="player" class="player-container">
+    <div class="js-video-container player-style"></div>
+    <div class="button-container">
+        <button class="js-play-button"><i class="fa fa-play" aria-hidden="true"></i></button>
+        <button class="js-pause-button"><i class="fa fa-pause" aria-hidden="true"></i></button>
+        <button class="js-mute-button"><i class="fa fa-volume-off" aria-hidden="true"></i></button>
+        <button class="js-volume-button"><i class="fa fa-volume-up" aria-hidden="true"></i></button>
+        <div id="free-space"></div>
+        <button class="js-fullscreen-button"><i class="fa fa-arrows-alt" aria-hidden="true"></i></button>
+    </div>
 </div>
-<div>
-    <h2>
-        <a href=#><b>Коала</b> — Википедия</a>
-        <br>
-        <small>
-            <small>
-                ru.wikipedia.org›Коала
-            </small>
-        </small>
-    </h2>
-    <p><b>Коaла</b> (лат. Phascolarctos cinereus) — вид сумчатых, обитающий в Австралии. Единственный современный
-        представитель семейства коаловых ... <a href=#>Читать ещё.</a>
-    </p>
-</div>
-<div>
-    <h2>
-        <a href=#><b>Коала</b> — Википедия</a>
-        <br>
-        <small>
-            <small>
-                ru.wikipedia.org›Коала
-            </small>
-        </small>
-    </h2>
-    <p><b>Коaла</b> (лат. Phascolarctos cinereus) — вид сумчатых, обитающий в Австралии. Единственный современный
-        представитель семейства коаловых ... <a href=#>Читать ещё.</a>
-    </p>
-</div>
-<div>
-    <h2>
-        <a href=#><b>Коала</b> — Википедия</a>
-        <br>
-        <small>
-            <small>
-                ru.wikipedia.org›Коала
-            </small>
-        </small>
-    </h2>
-    <p><b>Коaла</b> (лат. Phascolarctos cinereus) — вид сумчатых, обитающий в Австралии. Единственный современный
-        представитель семейства коаловых ... <a href=#>Читать ещё.</a>
-    </p>
-</div>
+
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://unpkg.com/playable@2.10.3/dist/statics/playable.bundle.min.js"></script>
+<script src="player.js"></script>
+
+<script type="text/javascript">
+    createPlayer({elementId: 'player'});
+</script>
+
 </body>
 </html>
