--- a/player/index.html
+++ b/player/index.html
@@ -37,7 +37,7 @@
 
         }
 
-        #free-space {
+        .free-space {
             flex-grow: 1;
         }
     </style>
@@ -50,7 +50,7 @@
         <button class="js-pause-button"><i class="fa fa-pause" aria-hidden="true"></i></button>
         <button class="js-mute-button"><i class="fa fa-volume-off" aria-hidden="true"></i></button>
         <button class="js-volume-button"><i class="fa fa-volume-up" aria-hidden="true"></i></button>
-        <div id="free-space"></div>
+        <div class="free-space"></div>
         <button class="js-fullscreen-button"><i class="fa fa-arrows-alt" aria-hidden="true"></i></button>
     </div>
 </div>
