Specify the name of container

--- a/player/index.html
+++ b/player/index.html
@@ -30,7 +30,7 @@
             flex-grow: 1;
         }
 
-        .button-container {
+        .player-button-container {
             background: black;
             display: flex;
             flex-direction: row;
@@ -45,7 +45,7 @@
 <body>
 <div id="player" class="player-container">
     <div class="js-video-container player-style"></div>
-    <div class="button-container">
+    <div class="player-button-container">
         <button class="js-play-button"><i class="fa fa-play" aria-hidden="true"></i></button>
         <button class="js-pause-button"><i class="fa fa-pause" aria-hidden="true"></i></button>
         <button class="js-mute-button"><i class="fa fa-volume-off" aria-hidden="true"></i></button>
