--- a/player/index.html
+++ b/player/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <title>Player</title>
     <link rel="stylesheet" href="static/css/font-awesome.min.css">
     <style type="text/css">
-        button {
+        .player-button-style {
             border: none;
             cursor: pointer;
             color: white;
@@ -20,49 +21,59 @@
         .player-container {
             width: 800px;
             height: 600px;
-            cursor: pointer;
+
             box-shadow: 0 0 2px 2px rgba(0, 0, 0, 4);
             display: flex;
             flex-direction: column;
         }
 
-        .player-style {
+        .player-screen-style,
+        .centre-buttons {
             flex-grow: 1;
         }
 
-        .player-button-container {
+        .player-button-container,
+        .left-buttons,
+        .right-buttons {
             background: black;
             display: flex;
             flex-direction: row;
-
-        }
-
-        .free-space {
-            flex-grow: 1;
+            cursor: pointer;
         }
     </style>
 </head>
+
 <body>
-<div id="player" class="player-container">
-    <div class="js-video-container player-style"></div>
-    <div class="player-button-container">
-        <button class="js-play-button"><i class="fa fa-play" aria-hidden="true"></i></button>
-        <button class="js-pause-button"><i class="fa fa-pause" aria-hidden="true"></i></button>
-        <button class="js-mute-button"><i class="fa fa-volume-off" aria-hidden="true"></i></button>
-        <button class="js-volume-button"><i class="fa fa-volume-up" aria-hidden="true"></i></button>
-        <div class="free-space"></div>
-        <button class="js-fullscreen-button"><i class="fa fa-arrows-alt" aria-hidden="true"></i></button>
+    <div id="player" class="player-container">
+        <div class="js-video-container player-screen-style"></div>
+        <div class="player-button-container">
+            <div class="left-buttons">
+                <button class="js-play-button player-button-style"><i class="fa fa-play"
+                        aria-hidden="true"></i></button>
+                <button class="js-pause-button player-button-style"><i class="fa fa-pause"
+                        aria-hidden="true"></i></button>
+                <button class="js-mute-button player-button-style"><i class="fa fa-volume-off"
+                        aria-hidden="true"></i></button>
+                <button class="js-volume-button player-button-style"><i class="fa fa-volume-up"
+                        aria-hidden="true"></i></button>
+            </div>
+            <div class="centre-buttons"></div>
+            <div class="right-buttons">
+                <button class="js-fullscreen-button player-button-style"><i class="fa fa-arrows-alt"
+                        aria-hidden="true"></i></button>
+            </div>
+        </div>
     </div>
-</div>
 
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://unpkg.com/playable@2.10.3/dist/statics/playable.bundle.min.js"></script>
-<script src="player.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://unpkg.com/playable@2.10.3/dist/statics/playable.bundle.min.js"></script>
+    <script src="player.js"></script>
 
-<script type="text/javascript">
-    createPlayer({elementId: 'player'});
-</script>
+    <script type="text/javascript">
+        createPlayer({ elementId: 'player' });
+    </script>
 
 </body>
+
 </html>
