Fix the sound player UI

--- a/player/index.html
+++ b/player/index.html
@@ -52,9 +52,9 @@
                         aria-hidden="true"></i></button>
                 <button class="js-pause-button player-button-style"><i class="fa fa-pause"
                         aria-hidden="true"></i></button>
-                <button class="js-mute-button player-button-style"><i class="fa fa-volume-off"
+                <button class="js-mute-button player-button-style"><i class="fa fa-volume-up"
                         aria-hidden="true"></i></button>
-                <button class="js-volume-button player-button-style"><i class="fa fa-volume-up"
+                <button class="js-volume-button player-button-style"><i class="fa fa-volume-off"
                         aria-hidden="true"></i></button>
             </div>
             <div class="centre-buttons"></div>
