--- a/player/index.html
+++ b/player/index.html
@@ -15,30 +15,31 @@
             line-height: 1;
             margin: 0.5%;
             padding: 5px;
-
+            height: 35px;
+            width: 35px;
         }
 
         .player-container {
             width: 800px;
             height: 600px;
-
             box-shadow: 0 0 2px 2px rgba(0, 0, 0, 4);
             display: flex;
             flex-direction: column;
         }
 
         .player-screen-style,
-        .centre-buttons {
+        .centre-buttons-container {
             flex-grow: 1;
         }
 
-        .player-button-container,
-        .left-buttons,
-        .right-buttons {
+        .player-buttons-container,
+        .left-buttons-container,
+        .right-buttons-container {
             background: black;
             display: flex;
             flex-direction: row;
             cursor: pointer;
+
         }
     </style>
 </head>
@@ -46,8 +47,8 @@
 <body>
     <div id="player" class="player-container">
         <div class="js-video-container player-screen-style"></div>
-        <div class="player-button-container">
-            <div class="left-buttons">
+        <div class="player-buttons-container">
+            <div class="left-buttons-container">
                 <button class="js-play-button player-button-style"><i class="fa fa-play"
                         aria-hidden="true"></i></button>
                 <button class="js-pause-button player-button-style"><i class="fa fa-pause"
@@ -57,8 +58,8 @@
                 <button class="js-volume-button player-button-style"><i class="fa fa-volume-off"
                         aria-hidden="true"></i></button>
             </div>
-            <div class="centre-buttons"></div>
-            <div class="right-buttons">
+            <div class="centre-buttons-container"></div>
+            <div class="right-buttons-container">
                 <button class="js-fullscreen-button player-button-style"><i class="fa fa-arrows-alt"
                         aria-hidden="true"></i></button>
             </div>
