--- a/player/index.html
+++ b/player/index.html
@@ -6,7 +6,26 @@
     <title>Player</title>
     <link rel="stylesheet" href="static/css/font-awesome.min.css">
     <style type="text/css">
-        .player-button-style {
+        .player-container {
+            width: 800px;
+            height: 600px;
+            box-shadow: 0 0 2px 2px rgba(0, 0, 0, 4);
+            display: flex;
+            flex-direction: column;
+        }
+
+        .player-screen,
+        .player-button-freespace {
+            flex-grow: 1;
+        }
+
+        .player-buttons-container {
+            background: black;
+            display: flex;
+            flex-direction: row;
+        }
+
+        .player-button {
             border: none;
             cursor: pointer;
             color: white;
@@ -18,49 +37,23 @@
             height: 35px;
             width: 35px;
         }
-
-        .player-container {
-            width: 800px;
-            height: 600px;
-            box-shadow: 0 0 2px 2px rgba(0, 0, 0, 4);
-            display: flex;
-            flex-direction: column;
-        }
-
-        .player-screen-style,
-        .centre-buttons-container {
-            flex-grow: 1;
-        }
-
-        .player-buttons-container,
-        .left-buttons-container,
-        .right-buttons-container {
-            background: black;
-            display: flex;
-            flex-direction: row;
-            cursor: pointer;
-
-        }
     </style>
 </head>
 
 <body>
     <div id="player" class="player-container">
-        <div class="js-video-container player-screen-style"></div>
+        <div class="js-video-container player-screen"></div>
         <div class="player-buttons-container">
-            <div class="left-buttons-container">
-                <button class="js-play-button player-button-style"><i class="fa fa-play"
-                        aria-hidden="true"></i></button>
-                <button class="js-pause-button player-button-style"><i class="fa fa-pause"
-                        aria-hidden="true"></i></button>
-                <button class="js-mute-button player-button-style"><i class="fa fa-volume-up"
-                        aria-hidden="true"></i></button>
-                <button class="js-volume-button player-button-style"><i class="fa fa-volume-off"
+            <div class="player-buttons-container">
+                <button class="js-play-button player-button"><i class="fa fa-play" aria-hidden="true"></i></button>
+                <button class="js-pause-button player-button"><i class="fa fa-pause" aria-hidden="true"></i></button>
+                <button class="js-mute-button player-button"><i class="fa fa-volume-up" aria-hidden="true"></i></button>
+                <button class="js-volume-button player-button"><i class="fa fa-volume-off"
                         aria-hidden="true"></i></button>
             </div>
-            <div class="centre-buttons-container"></div>
-            <div class="right-buttons-container">
-                <button class="js-fullscreen-button player-button-style"><i class="fa fa-arrows-alt"
+            <div class="player-button-freespace"></div>
+            <div class="player-buttons-container">
+                <button class="js-fullscreen-button player-button"><i class="fa fa-arrows-alt"
                         aria-hidden="true"></i></button>
             </div>
         </div>
