--- a/player/index.html
+++ b/player/index.html
@@ -15,7 +15,7 @@
         }
 
         .player-screen,
-        .player-button-freespace {
+        .player-freespace-between-button {
             flex-grow: 1;
         }
 
@@ -51,7 +51,7 @@
                 <button class="js-volume-button player-button"><i class="fa fa-volume-off"
                         aria-hidden="true"></i></button>
             </div>
-            <div class="player-button-freespace"></div>
+            <div class="player-freespace-between-button"></div>
             <div class="player-buttons-container">
                 <button class="js-fullscreen-button player-button"><i class="fa fa-arrows-alt"
                         aria-hidden="true"></i></button>
